# Client

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  pr-check.yml  release-client.yml  release.yml  version-bump.yml
launcher/: package.json  pnpm-lock.yaml
launcher/src/: App.tsx  styles.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs  meta.rs
plugin-example/: Cargo.toml
plugin-example/src/: lib.rs
plugin-loader/: Cargo.toml
plugin-loader/src/: lib.rs
plugin-macros/: Cargo.toml
plugin-macros/src/: lib.rs  plugin.rs
pomme-block/src/: fluid_state.rs  range.rs
pomme-client/: Cargo.toml  build.rs
pomme-client/src/: benchmark.rs  discord.rs  entity.rs  logging.rs  main.rs  particle.rs  user.rs  util.rs  version.rs
pomme-client/tools/: gen_block_sounds.py
pomme-gpu-allocator/: LICENSE
pomme-gpu-allocator/examples/: vulkan-buffer.rs
pomme-gpu-allocator/src/: lib.rs
pomme-launcher/: package.json
pomme-launcher/src/: App.tsx  styles.css
pomme-launcher/src-tauri/: Cargo.toml
pomme-protocol/src/: lib.rs  packets.rs  registries.rs  version.rs  wire.rs
src/: entity.rs  logging.rs  main.rs
src/net/: connection.rs  handler.rs  mod.rs
src/physics/: movement.rs
src/player/: mod.rs
src/renderer/: camera.rs  context.rs  mod.rs  util.rs
src/resources/: identifier.rs
src/sound/: mod.rs  sound_instance.rs  sound_manager.rs  sounds.rs
src/ui/: common.rs  (+5 more)
(+192 files in other folders)
